Add basic about page

--- a/about.html
+++ b/about.html
@@ -1,5 +1,34 @@
 ---
 layout: page
-title: About
-description: About me
+title: Hello! I'm Tom
+description: R&D software engineer based in Paris area
 ---
+
+<p>
+I have a strong passion for computer graphics, programming, and solving challenging problems. 
+Most of my work focuses on bridging the gap between the general public and computers, by providing intuitive interfaces and real time solutions.
+I am also very fond of video games and love to spend time playing them or writing IA for them.
+</p>
+
+<p>
+Since december 2016, I work for Mercenaries Engineering in Paris area as a R&D software engineer
+on <a href="https://rumba-animation.com/">Rumba</a>, a 3D animation software.
+
+</p>
+
+
+<p>
+  <a class="btn btn-primary" data-toggle="collapse" href="#collapseResume" role="button" aria-expanded="false" aria-controls="collapseResume">
+    Resumé (2020)
+  </a>
+</p>
+<div class="collapse" id="collapseResume">
+  <div class="card card-body">
+    <object data="{{"/assets/media/2020_Delame_Thomas.pdf" | relative_url }}" type="application/pdf" width="100%" height="900px"> 
+      <p>
+      It appears you do not have a PDF plugin for this browser. 
+      You can <a href="{{"/assets/media/2020_Delame_Thomas.pdf" | relative_url }}">click here</a> to download the PDF file.
+      </p>
+    </object>    
+  </div>
+</div>
