Refactor codingame introduction

--- a/_posts/codingame/2020-12-25-introduction.html
+++ b/_posts/codingame/2020-12-25-introduction.html
@@ -3,7 +3,20 @@ layout: post
 title: "CodinGame"
 subtitle: "competitive programming, AI, and fun!"
 date: 2020-12-25 08:00:00 +0200
+last_modified_at: 2020-12-30 16:00:00 +0200
 background: '/assets/media/codingame_introduction/codingame_generic_contest.jpeg'
+image: '/assets/media/codingame_introduction/codingame_generic_contest.jpeg'
+description: This article is an introduction to the activities you can do on CodinGame and how they could improve your developer skills
+published: true
+sitemap: true
+category: CodinGame
+tags: 
+  - CodinGame
+  - Bot Programming
+  - Developer Skills
+  - Optimization
+seo:
+  type: BlogPosting
 ---
 
 <p>
@@ -39,7 +52,7 @@ background: '/assets/media/codingame_introduction/codingame_generic_contest.jpeg
 <p>
   As of today, the 25th of December 2020, I am in the top 0.1% in the global ranking (2% for contests, 0.3% for bot programming, 4% for clash of code, 2% for optimization, and 0.3% for code golf).
   I know that there is a lot of room for improvement, but still, I am very proud of such a ranking &#128514;.
-  You can see my profile <a href="https://www.codingame.com/profile/13f69ffbb3731aaf6a96082320fc38448796273">here</a>.
+  You can check <a href="https://www.codingame.com/profile/13f69ffbb3731aaf6a96082320fc38448796273">my profile</a> to see my current ranking.
 </p>
 
 <p> 
