Add content in about page

--- a/about.html
+++ b/about.html
@@ -1,22 +1,25 @@
 ---
 layout: page
-title: Hello! I'm Tom
-description: R&D software engineer based in Paris area
+title: Thomas Delame
 ---
 
+<h2> About me </h2>
 <p>
-I have a strong passion for computer graphics, programming, and solving challenging problems. 
-Most of my work focuses on bridging the gap between the general public and computers, by providing intuitive interfaces and real time solutions.
-I am also very fond of video games and love to spend time playing them or writing IA for them.
+  I have a strong passion for computer graphics, programming, and solving challenging problems.
+  Most of my work focuses on bridging the gap between the general public and computers thanks to intuitive interfaces and real-time solutions.
 </p>
 
 <p>
-Since december 2016, I work for Mercenaries Engineering in Paris area as a R&D software engineer
-on <a href="https://rumba-animation.com/">Rumba</a>, a 3D animation software.
-
+  After a Ph.D. and a post-doc, both in computer graphics, I joined in December 2016 a french company named Mercenaries Engineering founded by Benjamin Legros and Cyril Corvazier.
+  Benjamin and Cyril put me in charge of developing, improving, and optimizing many core parts of <a href="https://rumba-animation.com/">Rumba</a>, a 3D animation software.
+  I am grateful to them for such a great opportunity.
+  I have learned so much in a short amount of time.
 </p>
 
-
+<p>
+  In February 2020, I started to write bots and game AI for fun.
+  I must say that such a hobby kept me busy and happy during the multiple confinements we had in France due to Covid19 &#128516;.
+</p>
 <p>
   <a class="btn btn-primary" data-toggle="collapse" href="#collapseResume" role="button" aria-expanded="false" aria-controls="collapseResume">
     Resumé (2020)
@@ -32,3 +35,25 @@ on <a href="https://rumba-animation.com/">Rumba</a>, a 3D animation software.
     </object>    
   </div>
 </div>
+
+<h2> About this site</h2>
+
+<p>
+  During my Ph.D. and my post-doc, I gave many lessons in Computer Science and Computer Graphics.
+  I enjoyed transmitting my knowledge to students.
+  I also liked to teach because it encouraged me to deepen my understanding and communicate efficiently.
+  Since I do not teach anymore in universities, I wanted to write articles instead. 
+</p>
+
+<p>
+  I am not a web developer, as you may tell by the actual look of the website. 
+  I have a lot of respect for those who can easily set up the appearance and behavior of elements on a webpage - this is not my case.
+  In the past, I gave up writing articles because I could not produce a website that looks good.
+  This time, I decided not to bother too much about the appearance but focus on the content.
+  So please, be indulgent (⌒_⌒;).
+</p>
+
+<p>
+  I intend to post articles about the various bot I developed (e.g., those on the CodinGame platform).
+  I may also write articles on other subjects as I currently have many topics ideas in mind.
+</p>
