Fix html errors on about page

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ title: Thomas Delame
 </p>
 <div class="collapse" id="collapseResume">
   <div class="card card-body">
-    <object data="{{"/assets/media/2020_Delame_Thomas.pdf" | relative_url }}" type="application/pdf" width="100%" height="900px"> 
+    <object data="{{"/assets/media/2020_Delame_Thomas.pdf" | relative_url }}" type="application/pdf" height="900"> 
       <p>
       It appears you do not have a PDF plugin for this browser. 
       You can <a href="{{"/assets/media/2020_Delame_Thomas.pdf" | relative_url }}">click here</a> to download the PDF file.
