Minor modifications of Langton's Ant article before publication

--- a/_posts/codingame/2020-12-25-introduction.html
+++ b/_posts/codingame/2020-12-25-introduction.html
@@ -3,7 +3,7 @@ layout: post
 title: "CodinGame"
 subtitle: "competitive programming, AI, and fun!"
 date: 2020-12-25 08:00:00 +0200
-last_modified_at: 2021-01-02 16:00:00 +0200
+last_modified_at: 2021-02-01 08:00:00 +0200
 background: '/assets/media/codingame_introduction/codingame_generic_contest.jpeg'
 seo_title: "Introduction to CodinGame"
 seo_teaser: "/assets/media/codingame_introduction/codingame_generic_contest.jpeg"
@@ -75,6 +75,7 @@ tags:
   Generally, you can reuse what you have learned on puzzles in bot programming or optimization.
   This is how I learned <a href="https://en.wikipedia.org/wiki/Monte_Carlo_tree_search">Monte Carlo Tree Search (MCTS)</a>,
     a heuristic search algorithm that I later reused in bot programming for board games.
+  You can read more about this technique with the <a href="{% post_url /codingame/2021-02-01-langton %}">MCTS bot I wrote for Langton's Ant</a>.
 </p>
 
 <p>
