Add identifier to MCTS section in Langton's article

--- a/_posts/codingame/2021-02-01-langton.html
+++ b/_posts/codingame/2021-02-01-langton.html
@@ -108,7 +108,7 @@ tags:
   <span class="caption text-muted">End of the second round of a match against DomiKo, after the ant finished to move. </span>
 </div>
 
-<h2> 3. A Better Bot Version </h2>
+<h2 id="mcts_solver"> 3. A Better Bot Version </h2>
 
 
 <!-- <h3> 3.1 MCTS - a Nice Algorithm for Board Games </h3> -->
