Add spring22 retrospective article

--- a/about.html
+++ b/about.html
@@ -12,13 +12,17 @@ title: Thomas Delame
 <p>
   After a Ph.D. and a post-doc, both in computer graphics, I joined in December 2016 a french company named Mercenaries Engineering founded by Benjamin Legros and Cyril Corvazier.
   Benjamin and Cyril put me in charge of developing, improving, and optimizing many core parts of <a href="https://rumba-animation.com/">Rumba</a>, a 3D animation software.
-  I am grateful to them for such a great opportunity.
-  I have learned so much in a short amount of time.
+  It was a great opportunity, I have learned so much in a short amount of time.
 </p>
 
 <p>
   In February 2020, I started to write bots and game AI for fun.
   I must say that such a hobby kept me busy and happy during the multiple confinements we had in France due to Covid19 &#128516;.
+</p>
+
+<p>
+  In March 2021, I joined Epic Games to work on <a href="https://www.twinmotion.com/">Twinmotion</a>.
+  My responsibilities are similar to when I worked on Rumba, except now it's for the AEC (Architecture Engineering and Construction) and product design industries.
 </p>
 <p>
   <a class="btn btn-primary" data-toggle="collapse" href="#collapseResume" role="button" aria-expanded="false" aria-controls="collapseResume">
@@ -27,12 +31,12 @@ title: Thomas Delame
 </p>
 <div class="collapse" id="collapseResume">
   <div class="card card-body">
-    <object data="{{"/assets/media/2020_Delame_Thomas.pdf" | relative_url }}" type="application/pdf" height="900"> 
+    <object data="{{"/assets/media/2020_Delame_Thomas.pdf" | relative_url }}" type="application/pdf" height="900">
       <p>
-      It appears you do not have a PDF plugin for this browser. 
+      It appears you do not have a PDF plugin for this browser.
       You can <a href="{{"/assets/media/2020_Delame_Thomas.pdf" | relative_url }}">click here</a> to download the PDF file.
       </p>
-    </object>    
+    </object>
   </div>
 </div>
 
@@ -42,11 +46,11 @@ title: Thomas Delame
   During my Ph.D. and my post-doc, I gave many lessons in Computer Science and Computer Graphics.
   I enjoyed transmitting my knowledge to students.
   I also liked to teach because it encouraged me to deepen my understanding and communicate efficiently.
-  Since I do not teach anymore in universities, I wanted to write articles instead. 
+  Since I do not teach anymore in universities, I wanted to write articles instead.
 </p>
 
 <p>
-  I am not a web developer, as you may tell by the actual look of the website. 
+  I am not a web developer, as you may tell by the actual look of the website.
   I have a lot of respect for those who can easily set up the appearance and behavior of elements on a webpage - this is not my case.
   In the past, I gave up writing articles because I could not produce a website that looks good.
   This time, I decided not to bother too much about the appearance but focus on the content.
